[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://scripts/GameTimer.gd" type="Script" id=2]
[ext_resource path="res://scripts/EventStream.gd" type="Script" id=3]
[ext_resource path="res://scripts/Control.gd" type="Script" id=4]
[ext_resource path="res://scripts/MainCamera.gd" type="Script" id=5]
[ext_resource path="res://scripts/MouseLocation.gd" type="Script" id=6]
[ext_resource path="res://scenes/BuildMenu.tscn" type="PackedScene" id=7]

[sub_resource type="Theme" id=1]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="GameTimer" type="Timer" parent="."]
autostart = true
script = ExtResource( 2 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="TimeLabel" type="Label" parent="UI"]
margin_right = 40.0
margin_bottom = 14.0
theme = SubResource( 1 )

[node name="EventStream" type="RichTextLabel" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="MouseLocation" type="Label" parent="UI"]
margin_left = 10.0
margin_bottom = 10.0
valign = 2
script = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="UI"]

[node name="Control" type="Control" parent="UI/CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/CanvasLayer/Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -260.0

[node name="BuildMenu" parent="UI/CanvasLayer/Control/HBoxContainer" instance=ExtResource( 7 )]
margin_bottom = 260.0

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
handle_input_locally = false
render_target_update_mode = 3

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )

[node name="MainCamera" type="Camera2D" parent="."]
rotation = 0.785398
current = true
script = ExtResource( 5 )
